--- a/charts/autox2/templates/deployment.yaml
+++ b/charts/autox2/templates/deployment.yaml
@@ -2,35 +2,35 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Release.Name }}
-  {{ template "iter8-abn.labels" . }}
+  {{ template "iter8-autox.labels" . }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ template "iter8-abn.name" . }}
+      app.kubernetes.io/name: {{ template "iter8-autox.name" . }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ template "iter8-abn.name" . }}
+        app.kubernetes.io/name: {{ template "iter8-autox.name" . }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
       serviceAccountName: {{ .Release.Name }}
       containers:
-      - name: iter8-abn
+      - name: iter8-autox
         image: {{ .Values.image }}
         command: ["/bin/iter8"]
-        args: ["abn"]
+        args: ["autox"]
         env:
         - name: WATCHER_CONFIG
-          value: /config/abn-config.yaml
+          value: /config/autox-config.yaml
         ports:
         - containerPort: {{ .Values.service.port }}
         volumeMounts:
-        - name: abn-config
+        - name: autox-config
           mountPath: "/config"
           readOnly: true
       volumes:
-      - name: abn-config
+      - name: autox-config
         configMap:
           name: {{ .Release.Name }}
