--- a/charts/autox2/templates/roles.yaml
+++ b/charts/autox2/templates/roles.yaml
@@ -5,7 +5,7 @@ kind: Role
 metadata:
   name: {{ $.Release.Name }}-watch-resources
   namespace: {{ $ns }}
-  {{ template "iter8-abn.labels" $ }}
+  {{ template "iter8-autox.labels" $ }}
 rules:
 {{- range $r := $.Values.resources }}
 {{- if eq $r "deployments" }}
@@ -25,7 +25,7 @@ kind: RoleBinding
 metadata:
   name: {{ $.Release.Name }}-watch-resources
   namespace: {{ $ns }}
-  {{ template "iter8-abn.labels" $ }}
+  {{ template "iter8-autox.labels" $ }}
 subjects:
 - kind: ServiceAccount
   name: {{ $.Release.Name }}
@@ -35,27 +35,3 @@ roleRef:
   name: {{ $.Release.Name }}-watch-resources
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  name: {{ $.Release.Name }}-metricstore
-  {{ template "iter8-abn.labels" $ }}
-rules:
-- apiGroups: [""]
-  resources: ["secrets"]
-  verbs: ["create", "list", "get", "update", "patch"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: {{ $.Release.Name }}-metricstore
-  {{ template "iter8-abn.labels" $ }}
-subjects:
-- kind: ServiceAccount
-  name: {{ $.Release.Name }}
-  namespace: {{ $.Release.Namespace }}
-roleRef:
-  kind: Role
-  name: {{ $.Release.Name }}-metricstore
-  apiGroup: rbac.authorization.k8s.io
