--- a/charts/autox2/values.yaml
+++ b/charts/autox2/values.yaml
@@ -1,5 +1,5 @@
-### ABn service image
-image: iter8/iter8-abn:v0.11
+### AutoX service image
+image: iter8/iter8-autox:v0.11
 
 service: 
   port: 50051
