--- a/charts/autox2/templates/configmap.yaml
+++ b/charts/autox2/templates/configmap.yaml
@@ -7,26 +7,30 @@ data:
   resource-config.yaml: | 
     resources: 
     {{- range $r := .Values.resources }}
-    {{- if eq $r "deployment" }}
+    {{- if eq $r "deployments" }}
     - group: apps
       version: v1
-      resource: deployment
+      resource: deployments
     {{- end }}
-    {{- if eq $r "service" }}
+    {{- if eq $r "services" }}
     - version: v1
-      resource: service
+      resource: services
+    {{- end }}
+    {{- if eq $r "ksvcs" }}
+    - group: serving.knative.dev
+      version: v1
+      resource: services
     {{- end }}
     {{- end }}
     namespaces:
 {{ toYaml .Values.namespaces | indent 4 }}
   group-config.yaml: |
-    groups:
-      {{- range $name, $groups := .Values.groups }}
-      - {{ $name }}:
-          charts:
-          {{- range $g := $groups }}
-            - repo: {{ $g.repo }}
-              name: {{ $g.chartName }}
-              valuesFileURL: {{ $g.valuesFileURL }}
-          {{- end }}
-        {{- end }}
+    {{- range $name, $groups := .Values.groups }}
+    - name: {{ $name }}
+      charts:
+      {{- range $g := $groups }}
+        - repo: {{ $g.repo }}
+          name: {{ $g.chartName }}
+          valuesFileURL: {{ $g.valuesFileURL }}
+      {{- end }}
+    {{- end }}
