--- a/charts/autox/Chart.yaml
+++ b/charts/autox/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: iter8-autox
 version: 0.1.1
-description: Iter8 autoX support serivce
+description: Iter8 autoX controller
 type: application
 keywords:
 - Iter8
@@ -11,6 +11,8 @@ home: https://iter8.tools
 sources:
 - https://github.com/iter8-tools/iter8
 maintainers:
+- name: Alan Cha
+  email: alan.cha1@ibm.com
 - name: Iter8
   email: iter8-tools@gmail.com
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
