--- a/charts/autox/templates/roles.yaml
+++ b/charts/autox/templates/roles.yaml
@@ -18,6 +18,11 @@ rules:
   resources: ["services"]
   verbs: ["watch", "list"]
 {{- end }}
+{{- if eq $r "ksvcs" }}
+- apiGroups: [""]
+  resources: ["services"]
+  verbs: ["watch", "list"]
+{{- end }}
 {{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
