--- a/charts/autox/templates/deployment.yaml
+++ b/charts/autox/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         - name: RESOURCE_CONFIG
           value: /config/resource-config.yaml
         - name: CHART_GROUP_CONFIG
-          value: /config/group-config.yaml
+          value: /config/chart-group-config.yaml
         volumeMounts:
         - name: autox-config
           mountPath: "/config"
