--- a/charts/litmuschaos/Chart.yaml
+++ b/charts/litmuschaos/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 appVersion: "1.13.8"
-description: A Helm chart to perform a joint Iter8 and Litmus Chaos experiment
-name: litmus
+description: A Helm chart to perform Litmus Chaos experiments
+name: litmuschaos
 version: 0.0.1
 home: https://litmuschaos.io
 sources:
@@ -12,8 +12,8 @@ keywords:
   - kubernetes
   - pod
 maintainers:
-  - name: ksatchit
-    email: karthik.s@mayadata.io
-  - name: ispeakc0de
-    email: shubham@chaosnative.com
+  - name: Shubham Chaudhary
+    email: shubham.chaudhary@harness.io
+  - name: Srinivasan Parthasarathy
+    email: spartha@us.ibm.com
 icon: https://raw.githubusercontent.com/litmuschaos/icons/master/litmus.png
