--- a/charts/litmuschaos/values.yaml
+++ b/charts/litmuschaos/values.yaml
@@ -1,8 +1,8 @@
 # Type of kubernetes workload
 appkind: deployment
 
-# Total Chaos Duration
-totalChaosDuration: "60"
+# Total Chaos Duration: keep killing pods for an hour
+totalChaosDuration: "3600"
 
-# Chaos Interval
-chaosInterval: "4"
+# Chaos Interval: kill a pod every 2 seconds
+chaosInterval: "2"
