--- a/charts/iter8/Chart.yaml
+++ b/charts/iter8/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
 name: iter8
-version: 0.11.3
-description: Iter8 experiment library chart
+version: 0.12.0
+description: Iter8 experiment chart
 type: application
 home: https://iter8.tools
 sources:
-- https://github.com/iter8-tools/iter8
+- https://github.com/iter8-tools/hub
 maintainers:
 - name: Srinivasan Parthasarathy
   email: spartha@us.ibm.com
@@ -13,7 +13,3 @@ maintainers:
 - name: Michael Kalantar
   email: kalantar@us.ibm.com
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
-dependencies:
-- name: iter8lib
-  version: 0.11.4
-  repository:  https://iter8-tools.github.io/hub/
