--- a/charts/autox/templates/configmap.yaml
+++ b/charts/autox/templates/configmap.yaml
@@ -6,30 +6,30 @@ metadata:
 stringData:
   chart-group-config.yaml: |
     specs:
-    {{- range $name, $chartGroup := .Values.chartGroups }}
-      {{ $name }}:
+    {{- range $releaseGroupSpecName, $releaseGroupSpec := .Values.releaseGroupSpecs }}
+      {{ $releaseGroupSpecName }}:
         trigger:
-          group: {{ $chartGroup.trigger.group }}
-          version: {{ $chartGroup.trigger.version }}
-          resource: {{ $chartGroup.trigger.resource }}
-          name: {{ $chartGroup.trigger.name }}
-          namespace: {{ $chartGroup.trigger.namespace }}
+          group: {{ $releaseGroupSpec.trigger.group }}
+          version: {{ $releaseGroupSpec.trigger.version }}
+          resource: {{ $releaseGroupSpec.trigger.resource }}
+          name: {{ $releaseGroupSpec.trigger.name }}
+          namespace: {{ $releaseGroupSpec.trigger.namespace }}
         releaseSpecs:
-        {{- range $cg := $chartGroup.releaseSpecs }}
-          {{ $cg.chartID }}:
-            repoURL: {{ $cg.repoURL }}
-            name: {{ $cg.name }}
-            values: {{ $cg.values }}
-            version: {{ $cg.version }}
+        {{- range $releaseSpecName, $releaseSpec := $releaseGroupSpec.releaseSpecs }}
+          {{ $releaseSpecName }}:
+            repoURL: {{ $releaseSpec.repoURL }}
+            name: {{ $releaseSpec.name }}
+            values: {{ $releaseSpec.values }}
+            version: {{ $releaseSpec.version }}
         {{- end }}
     {{- end }}
-{{- range $name, $chartGroup := .Values.chartGroups }}
-{{ $hash := print $chartGroup | sha256sum | trunc 5 }}
+{{- range $releaseGroupSpecName, $releaseGroupSpec := .Values.releaseGroupSpecs }}
+{{ $hash := print $releaseGroupSpec | sha256sum | trunc 5 }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: autox-{{ $name }}-{{ $hash }}
+  name: autox-{{ $releaseGroupSpecName }}-{{ $hash }}
   labels:
-    iter8.tools/autox-group: {{ $name }}
+    iter8.tools/autox-group: {{ $releaseGroupSpecName }}
 {{- end }}
