--- a/charts/abn-service/values.yaml
+++ b/charts/abn-service/values.yaml
@@ -4,13 +4,7 @@ image: iter8/iter8:0.12
 service: 
   port: 50051
 
-### comma separated list of resource types to watch
-### valid types include:
-###    deployments - apps.v1.deployments
-###    services - v1.services
-resources: null
-
-### comma separated list of namespaces in which to watch resources
-namespaces: null
+### map of applications
+applications: null
 
 logLevel: info
