--- a/charts/abn-service/templates/configmap.yaml
+++ b/charts/abn-service/templates/configmap.yaml
@@ -12,16 +12,14 @@ data:
         maxNumCandidates: {{ default 1 $config.maxNumCandidates }}
         resources: 
         {{- range $r := $config.resources }}
-        {{- if eq $r "deployments" }}
+        {{- if eq $r "deployment" }}
         - group: apps
           version: v1
           resource: deployments
-        {{- end }}
-        {{- if eq $r "services" }}
+        {{- else if eq $r "service" }}
         - version: v1
           resource: services
-        {{- end }}
-        {{- if eq $r "ksvcs" }}
+        {{- else if eq $r "ksvc" }}
         - group: serving.knative.dev
           version: v1
           resource: services
