--- a/charts/autox/templates/configmap.yaml
+++ b/charts/autox/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}
+  namespace: argocd
   {{ template "iter8-autox.labels" . }}
 stringData:
   config.yaml: |
@@ -19,7 +20,8 @@ stringData:
           {{ $releaseSpecName }}:
             repoURL: {{ $releaseSpec.repoURL }}
             name: {{ $releaseSpec.name }}
-            values: {{ $releaseSpec.values }}
+            values: 
+              {{ toYaml $releaseSpec.values | indent 14 | trim }}
             version: {{ $releaseSpec.version }}
         {{- end }}
     {{- end }}
@@ -30,6 +32,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: autox-{{ $releaseGroupSpecName }}-{{ $hash }}
+  namespace: argocd
   labels:
     iter8.tools/autox-group: {{ $releaseGroupSpecName }}
 {{- end }}
