--- a/charts/autox/templates/roles.yaml
+++ b/charts/autox/templates/roles.yaml
@@ -1,3 +1,32 @@
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: {{ $.Release.Name }}-argocd
+  namespace: argocd
+  {{ template "iter8-autox.labels" $ }}
+rules:
+- apiGroups: ["argoproj.io"]
+  resources: ["applications"]
+  verbs: ["create", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ $.Release.Name }}-argocd
+  namespace: argocd
+  {{ template "iter8-autox.labels" $ }}
+subjects:
+- kind: ServiceAccount
+  name: {{ $.Release.Name }}
+  namespace: argocd
+roleRef:
+  kind: Role
+  name: {{ $.Release.Name }}-argocd
+  apiGroup: rbac.authorization.k8s.io
 {{- range $ns := .Values.namespaces }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -11,17 +40,17 @@ rules:
 {{- if eq $r "deployments" }}
 - apiGroups: ["apps"]
   resources: ["deployments"]
-  verbs: ["watch", "list"]
+  verbs: ["watch", "list", "get"]
 {{- end }}
 {{- if eq $r "services" }}
 - apiGroups: [""]
   resources: ["services"]
-  verbs: ["watch", "list"]
+  verbs: ["watch", "list", "get"]
 {{- end }}
 {{- if eq $r "ksvcs" }}
 - apiGroups: ["serving.knative.dev"]
   resources: ["services"]
-  verbs: ["watch", "list"]
+  verbs: ["watch", "list", "get"]
 {{- end }}
 {{- end }}
 ---
@@ -34,7 +63,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: {{ $.Release.Name }}
-  namespace: {{ $.Release.Namespace }}
+  namespace: argocd
 roleRef:
   kind: Role
   name: {{ $.Release.Name }}-watch-resources
