--- a/charts/autox/templates/serviceaccount.yaml
+++ b/charts/autox/templates/serviceaccount.yaml
@@ -2,4 +2,5 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Release.Name }}
+  namespace: argocd
   {{ template "iter8-autox.labels" . }}
