--- a/charts/abn-service/templates/configmap.yaml
+++ b/charts/abn-service/templates/configmap.yaml
@@ -16,6 +16,7 @@ data:
         - group: apps
           version: v1
           resource: deployments
+          condition: Available
         {{- else if eq $r "service" }}
         - version: v1
           resource: services
@@ -23,6 +24,7 @@ data:
         - group: serving.knative.dev
           version: v1
           resource: services
+          condition: Ready
         {{- end }}
         {{- end }}
       {{- end }}
