--- a/charts/abn-service/templates/roles.yaml
+++ b/charts/abn-service/templates/roles.yaml
@@ -4,7 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: {{ $ns }}
-  name: {{ $.Release.Name }}-watcher-resources
+  name: {{ $.Release.Name }}-lister
   {{ template "iter8-abn.labels" $ }}
 rules:
 {{- range $nm, $config := $apps }}
@@ -18,11 +18,46 @@ rules:
   {{- else if eq $r "ksvc"}}
   - apiGroup: ["serving.knative.dev"]
     resources: ["services"]
-  {{- else if eq $r "chaosengine" }}
-  - apiGroups: ["litmuschaos.io"]
-    resources: ["chaosengines"]
   {{- end }}
-    verbs: ["watch", "list", "get", "update", "patch"]
+    verbs: ["list", "watch"]
+  {{- end }}
+{{- end }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ $.Release.Name }}-lister
+  namespace: {{ $ns }}
+  {{ template "iter8-abn.labels" $ }}
+subjects:
+- kind: ServiceAccount
+  name: {{ $.Release.Name }}
+  namespace: {{ $.Release.Namespace }}
+roleRef:
+  kind: Role
+  name: {{ $.Release.Name }}-lister
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: {{ $ns }}
+  name: {{ $.Release.Name }}-watcher
+  {{ template "iter8-abn.labels" $ }}
+rules:
+{{- range $nm, $config := $apps }}
+  {{- range $r := $config.resources }}
+  {{- if eq $r "deployment" }}
+  - apiGroups: ["apps"]
+    resources: ["deployments"]
+  {{- else if eq $r "service" }}
+  - apiGroups: [""]
+    resources: ["services"]
+  {{- else if eq $r "ksvc"}}
+  - apiGroup: ["serving.knative.dev"]
+    resources: ["services"]
+  {{- end }}
+    verbs: ["get", "update"]
     resourceNames:
     - {{ $nm }}
     {{- $foo := untilStep 1 (int (add 1 (default 1 $config.maxNumCandidates))) 1 }}
@@ -35,7 +70,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ $.Release.Name }}-watch-resources
+  name: {{ $.Release.Name }}-watcher
   namespace: {{ $ns }}
   {{ template "iter8-abn.labels" $ }}
 subjects:
@@ -44,7 +79,7 @@ subjects:
   namespace: {{ $.Release.Namespace }}
 roleRef:
   kind: Role
-  name: {{ $.Release.Name }}-watch-resources
+  name: {{ $.Release.Name }}-watcher
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
