--- a/charts/autox/templates/roles.yaml
+++ b/charts/autox/templates/roles.yaml
@@ -8,7 +8,7 @@ metadata:
 rules:
 - apiGroups: ["argoproj.io"]
   resources: ["applications"]
-  verbs: ["create", "patch", "delete"]
+  verbs: ["create", "get", "patch", "delete"]
 - apiGroups: [""]
   resources: ["secrets"]
   verbs: ["list"]
