--- a/.github/workflows/releasecharts.yaml
+++ b/.github/workflows/releasecharts.yaml
@@ -7,10 +7,12 @@ on:
 
 jobs:
   release:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -25,8 +27,8 @@ jobs:
           version: v3.7.1
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.3.0
+        uses: helm/chart-releaser-action@v1.5.0
         with:
-          config: config.yaml
+          skip-existing: true        
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
