--- a/charts/autox/values.yaml
+++ b/charts/autox/values.yaml
@@ -1,5 +1,5 @@
 ### AutoX service image
-image: iter8/iter8-autox:v0.11
+image: iter8/iter8:0.13
 
 ### comma separated list of resource types to watch
 ### valid types include:
