--- a/charts/abn-service/Chart.yaml
+++ b/charts/abn-service/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: iter8-abn
-version: 0.2.0
+name: abn
+version: 0.2.1
 description: Iter8 ABn support service
 type: application
 keywords:
