--- a/charts/autox/Chart.yaml
+++ b/charts/autox/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: iter8-autox
-version: 0.1.4
+name: autox
+version: 0.1.5
 description: Iter8 autoX controller
 type: application
 keywords:
