--- a/charts/abn/templates/secret.yaml
+++ b/charts/abn/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- range $ns, $apps := .Values.applications }}
+{{- range $ns, $apps := .Values.apps }}
 {{- range $nm, $config := $apps }}
 apiVersion: v1
 kind: Secret
