--- a/charts/abn/templates/roles.yaml
+++ b/charts/abn/templates/roles.yaml
@@ -1,4 +1,4 @@
-{{- range $ns, $apps := .Values.applications }}
+{{- range $ns, $apps := .Values.apps }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
