--- a/charts/autox/templates/secret.yaml
+++ b/charts/autox/templates/secret.yaml
@@ -7,7 +7,7 @@ metadata:
 stringData:
   config.yaml: |
     specs:
-    {{- range $releaseGroupSpecName, $releaseGroupSpec := .Values.releaseGroupSpecs }}
+    {{- range $releaseGroupSpecName, $releaseGroupSpec := .Values.groups }}
       {{ $releaseGroupSpecName }}:
         trigger:
           group: {{ $releaseGroupSpec.trigger.group }}
@@ -16,7 +16,7 @@ stringData:
           name: {{ $releaseGroupSpec.trigger.name }}
           namespace: {{ $releaseGroupSpec.trigger.namespace }}
         releaseSpecs:
-        {{- range $releaseSpecName, $releaseSpec := $releaseGroupSpec.releaseSpecs }}
+        {{- range $releaseSpecName, $releaseSpec := $releaseGroupSpec.specs }}
           {{ $releaseSpecName }}:
             name: {{ $releaseSpec.name }}
             values: 
@@ -24,7 +24,7 @@ stringData:
             version: {{ $releaseSpec.version }}
         {{- end }}
     {{- end }}
-{{- range $releaseGroupSpecName, $releaseGroupSpec := .Values.releaseGroupSpecs }}
+{{- range $releaseGroupSpecName, $releaseGroupSpec := .Values.groups }}
 {{ $hash := print $releaseGroupSpec | sha256sum | trunc 5 }}
 ---
 apiVersion: v1
