--- a/charts/autox/templates/roles.yaml
+++ b/charts/autox/templates/roles.yaml
@@ -27,7 +27,7 @@ roleRef:
   kind: Role
   name: {{ $.Release.Name }}-argocd
   apiGroup: rbac.authorization.k8s.io
-{{- range $releaseGroupSpecName, $releaseGroupSpec := .Values.releaseGroupSpecs }}
+{{- range $releaseGroupSpecName, $releaseGroupSpec := .Values.groups }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
