--- a/charts/traffic/templates/roles.yaml
+++ b/charts/traffic/templates/roles.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: {{ $.Release.Name }}-traffic
   {{ template "iter8-traffic.labels" $ }}
@@ -11,17 +11,18 @@ rules:
 {{- end }}
 - apiGroups: ["{{- $type.group -}}"]
   resources: ["{{- $type.resource -}}"]
-  verbs: ["read", "watch"]
+  verbs: ["get", "list", "watch", "patch", "update"]
 {{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: {{ $.Release.Name }}-traffic
   {{ template "iter8-traffic.labels" $ }}
 subjects:
 - kind: ServiceAccount
   name: {{ $.Release.Name }}
+  namespace: {{ $.Release.Namespace }}
 roleRef:
   kind: Role
   name: {{ $.Release.Name }}-traffic
