--- a/.github/workflows/versionbump.yaml
+++ b/.github/workflows/versionbump.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [charts/abn, charts/autox, charts/iter8]
     name: Test changed-files
     steps:
       - uses: actions/checkout@v3
@@ -28,43 +31,26 @@ jobs:
 
       #     find charts -maxdepth 1 -mindepth 1 -type d
 
-      - name: Get modified files in the charts/abn folder
-        id: modified-files-abn
+      - name: Get modified files in the ${{ matrix.version }} folder
+        id: modified-files
         uses: tj-actions/changed-files@v35
         with:
-          files: charts/abn
+          files: ${{ matrix.version }}
 
-      #  - name: Run step if any file(s) in the charts/abn folder was modified
-      #   if: steps.modified-files-abn.outputs.any_modified == 'true'
+      #  - name: Run step if any file(s) in the ${{ matrix.version }} folder was modified
+      #   if: steps.modified-files.outputs.any_modified == 'true'
       #   run: |
-      #     for file in ${{ steps.modified-files-abn.outputs.all_modified_files }}; do
+      #     for file in ${{ steps.modified-files.outputs.all_modified_files }}; do
       #       echo "$file was modified"
       #     done
 
-      - name: Run step if any file(s) in the charts/abn folder was modified
-        if: steps.modified-files-abn.outputs.any_modified == 'true'
+      - name: Run step if any file(s) in the ${{ matrix.version }} folder was modified
+        if: steps.modified-files.outputs.any_modified == 'true'
         run: |
-          for file in ${{ steps.modified-files-abn.outputs.all_modified_files }}; do
+          for file in ${{ steps.modified-files.outputs.all_modified_files }}; do
             echo "$file was modified"
           done
 
-          if [[ ${{ steps.modified-files-abn.outputs.all_modified_files }} == *"charts/abn/Chart.yaml"* ]]; then
+          if [[ ${{ steps.modified-files.outputs.all_modified_files }} == *"charts/abn/Chart.yaml"* ]]; then
             echo "charts/abn/Chart.yaml has been modified"
-          fi
-
-      - name: Get modified files in the charts/autox folder
-        id: modified-files-autox
-        uses: tj-actions/changed-files@v35
-        with:
-          files: charts/autox
-
-      - name: Run step if any file(s) in the charts/autox folder was modified
-        if: steps.modified-files-autox.outputs.any_modified == 'true'
-        run: |
-          for file in ${{ steps.modified-files-autox.outputs.all_modified_files }}; do
-            echo "$file was modified"
-          done
-
-          if [[ ${{ steps.modified-files-autox.outputs.all_modified_files }} == *"charts/autox/Chart.yaml"* ]]; then
-            echo "charts/autox/Chart.yaml has been modified"
           fi
