--- a/.github/workflows/versionbump.yaml
+++ b/.github/workflows/versionbump.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+      - ssa
+  workflow_dispatch:
+  
 jobs:
   build:
     runs-on: ubuntu-latest
