--- a/.github/workflows/versionbump.yaml
+++ b/.github/workflows/versionbump.yaml
@@ -33,6 +33,8 @@ jobs:
           # Get git diff of main branch and PR branch
           gitDiff=$(git diff --name-only origin/main origin/${GITHUB_HEAD_REF})
 
+          echo "$diffFile"
+
           # Deletion and addition in Chart.yaml
           part1=$'--- a/'
           part2=$'\n+++ b/'
