--- a/.github/workflows/versionbump.yaml
+++ b/.github/workflows/versionbump.yaml
@@ -31,7 +31,7 @@ jobs:
           chartFile="${{ matrix.version }}/Chart.yaml"
 
           # Get git diff of main branch and PR branch
-          gitDiff=$(git diff --name-only origin/main origin/${GITHUB_HEAD_REF})
+          gitDiff=$(git diff origin/main origin/${GITHUB_HEAD_REF})
 
           echo "$gitDiff"
 
