--- a/.github/workflows/versionbump.yaml
+++ b/.github/workflows/versionbump.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [charts/abn, charts/autox, charts/iter8, charts/litmuschaos, charts/traffic]
+        version: [charts/abn, charts/autox, charts/iter8, charts/litmuschaos]
     name: Test changed-files
     steps:
       - uses: actions/checkout@v3
@@ -29,7 +29,7 @@ jobs:
           chartFile="${{ matrix.version }}/Chart.yaml"
 
           # Get git diff of main branch and PR branch
-          gitDiff=$(git diff origin/main origin/${GITHUB_HEAD_REF})
+          gitDiff=$(git diff)
 
           # Deletion and addition in Chart.yaml
           delete=$'--- a/'
