--- a/.github/workflows/versionbump.yaml
+++ b/.github/workflows/versionbump.yaml
@@ -31,6 +31,8 @@ jobs:
           # Get git diff of main branch and PR branch
           gitDiff=$(git diff)
 
+          echo "$gitDiff"
+
           # Deletion and addition in Chart.yaml
           delete=$'--- a/'
           add=$'\n+++ b/'
