--- a/.github/workflows/versionbump.yaml
+++ b/.github/workflows/versionbump.yaml
@@ -29,7 +29,7 @@ jobs:
           chartFile="${{ matrix.version }}/Chart.yaml"
 
           # Get git diff of main branch and PR branch
-          gitDiff=$(git diff)
+          gitDiff=$(git diff origin/main..HEAD)
 
           echo "$gitDiff"
 
