--- a/charts/traffic/templates/statefulset.yaml
+++ b/charts/traffic/templates/statefulset.yaml
@@ -33,6 +33,16 @@ spec:
         - name: config
           mountPath: "/config"
           readOnly: true
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+        securityContext:
+          readOnlyRootFilesystem: true
+          runAsNonRoot: true
       volumes:
         - name: config
           configMap:
