--- a/charts/abn/values.yaml
+++ b/charts/abn/values.yaml
@@ -8,3 +8,11 @@ service:
 apps: null
 
 logLevel: info
+
+### Resource limits
+requests:
+  memory: "64Mi"
+  cpu: "250m"
+limits:
+  memory: "128Mi"
+  cpu: "500m"
