--- a/charts/autox/templates/deployment.yaml
+++ b/charts/autox/templates/deployment.yaml
@@ -32,11 +32,11 @@ spec:
           readOnly: true
         resources:
           requests:
-            memory: "64Mi"
-            cpu: "250m"
+            memory: "{{ .Values.requests.memory }}"
+            cpu: "{{ .Values.requests.cpu }}"
           limits:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: "{{ .Values.limits.memory }}"
+            cpu: "{{ .Values.limits.cpu }}"
         securityContext:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
