--- a/charts/traffic/templates/statefulset.yaml
+++ b/charts/traffic/templates/statefulset.yaml
@@ -43,6 +43,7 @@ spec:
         securityContext:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
+          runAsUser: 1000
       volumes:
         - name: config
           configMap:
