--- a/charts/abn/values.yaml
+++ b/charts/abn/values.yaml
@@ -10,9 +10,10 @@ apps: null
 logLevel: info
 
 ### Resource limits
-requests:
-  memory: "64Mi"
-  cpu: "250m"
-limits:
-  memory: "128Mi"
-  cpu: "500m"
+resources:
+  requests:
+    memory: "64Mi"
+    cpu: "250m"
+  limits:
+    memory: "128Mi"
+    cpu: "500m"
