--- a/charts/autox/values.yaml
+++ b/charts/autox/values.yaml
@@ -4,9 +4,10 @@ image: iter8/iter8:0.13
 logLevel: info
 
 ### Resource limits
-requests:
-  memory: "64Mi"
-  cpu: "250m"
-limits:
-  memory: "128Mi"
-  cpu: "500m"
+resources:
+  requests:
+    memory: "64Mi"
+    cpu: "250m"
+  limits:
+    memory: "128Mi"
+    cpu: "500m"
