--- a/charts/traffic/templates/statefulset.yaml
+++ b/charts/traffic/templates/statefulset.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ .Release.Name }}
   {{ template "iter8-traffic.labels" . }}
 spec:
+  serviceName: {{ .Release.Name }}
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ template "iter8-traffic.name" . }}
@@ -21,6 +22,8 @@ spec:
         command: ["/bin/iter8"]
         args: ["controllers", "-l", "{{ .Values.logLevel }}"]
         env:
+        - name: CONFIG
+          value: /config/config.yaml
         - name: POD_NAME
           valueFrom:
             fieldRef:
@@ -34,12 +37,7 @@ spec:
           mountPath: "/config"
           readOnly: true
         resources:
-          requests:
-            memory: "{{ .Values.requests.memory }}"
-            cpu: "{{ .Values.requests.cpu }}"
-          limits:
-            memory: "{{ .Values.limits.memory }}"
-            cpu: "{{ .Values.limits.cpu }}"
+          {{ toYaml .Values.resources | indent 10 | trim }}
         securityContext:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
