Change to CONFIG_FILE
Signed-off-by: Alan Cha <Alan.cha1@ibm.com>

--- a/charts/traffic/templates/statefulset.yaml
+++ b/charts/traffic/templates/statefulset.yaml
@@ -22,7 +22,7 @@ spec:
         command: ["/bin/iter8"]
         args: ["controllers", "-l", "{{ .Values.logLevel }}"]
         env:
-        - name: CONFIG
+        - name: CONFIG_FILE
           value: /config/config.yaml
         - name: POD_NAME
           valueFrom:
