--- a/charts/traffic/templates/roles.yaml
+++ b/charts/traffic/templates/roles.yaml
@@ -19,6 +19,9 @@ rules:
 - apiGroups: [""]
   resources: ["events"]
   verbs: ["get", "create"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 {{- if .Values.clusterScoped }}
